# RemoTI-Linux

./: .gitignore  README.md  ZRC20-Host_1.0_manifest.html  createAppPatch.sh
Projects/tools/LinuxHost/: CMakeLists.txt  RemoTI_RNP.cfg  build.gradle  gradle.properties  makefile  makefile_NPI_Client  makefile_NPI_Server  makefile_PC  makefile_PC_NPI_Client  makefile_PC_NPI_Server  remoti-linux.spec  settings.gradle
Projects/tools/LinuxHost/application/: CMakeLists.txt  SimpleConsole_lnx.c
Projects/tools/LinuxHost/application/common/: CMakeLists.txt  MSO_Voice_lib.h  RTI_Testapp.c  RTI_Testapp.h  bin2c.sh  common_app.h  configParser.c  configParser.h  liveGraph.c  liveGraph.h  lprfLogging.h  sb_load.h  sbl.c  sbl.h  time_printf.c  time_printf.h  timer.c  timer.h
Projects/tools/LinuxHost/application/mpa/: MP-TestStation1.cfg  MP-TestStation2.cfg  MP-TestStation3.cfg  makefile  massProduction_app.c  massProduction_app.h  massProduction_main.c  massProduction_main.h
Projects/tools/LinuxHost/application/simple/: makefile  simple_app.c  simple_app.h  simple_app_main.c  simple_app_main.h
Projects/tools/LinuxHost/application/zrc20/: makefile  zrc_app.c  zrc_app.h  zrc_app_log_constants.c  zrc_app_log_constants.h  zrc_app_main.c  zrc_app_main.h  zrc_configuration.c  zrc_configuration.h
Projects/tools/LinuxHost/cmake/: rpm_server_post_install.sh  rpm_server_post_uninstall.sh
Projects/tools/LinuxHost/common/: tiLogging.c  tiLogging.h  time_printf.c
Projects/tools/LinuxHost/configuration/: readMe.txt
Projects/tools/LinuxHost/configuration/BeagleBoard/: RemoTI_RNP_I2C.cfg  RemoTI_RNP_SPI.cfg
Projects/tools/LinuxHost/configuration/BeagleBoneBlack/: RemoTI_RNP_ACM0.cfg  RemoTI_RNP_I2C_BBB.cfg  RemoTI_RNP_I2C_BBB_DBG.cfg  RemoTI_RNP_SPI_BBB.cfg  RemoTI_RNP_SPI_BBB_DBG.cfg  RemoTI_RNP_UART4_BBB.cfg  RemoTI_RNP_UART5_BBB.cfg  ZNP_SPI_BBB.cfg  ZNP_UART_BBB.cfg
Projects/tools/LinuxHost/configuration/BeagleBoneBlack/devicetree/: CC25xx-DBG-GPIO-00A0.dtbo  NPI-GPIO-00A0.dtbo
Projects/tools/LinuxHost/configuration/BeagleBoneBlack/systemd/: npi_config.service  npi_server.conf  npi_server.service  npi_server.start
Projects/tools/LinuxHost/configuration/BeagleBoneBlack/upstart/: npi_server.conf  npi_server_acm0.conf  remoti_init.conf  remoti_uinput.conf
Projects/tools/LinuxHost/configuration/systemd/: remoti-linux.service  rf4ce.service.in
Projects/tools/LinuxHost/configuration/x86/: RemoTI_RNP_ACM0.cfg  RemoTI_RNP_ACM1.cfg  RemoTI_RNP_CDC0.cfg  RemoTI_RNP_CDC1.cfg  RemoTI_RNP_USB0.cfg  RemoTI_RNP_USB1.cfg
Projects/tools/LinuxHost/ipclib/: CMakeLists.txt  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_rpc.h  hal_spi.c  hal_spi.h  npi_lnx.h  npi_lnx_error.h  npi_lnx_i2c.c  npi_lnx_i2c.h  npi_lnx_ipc.c  npi_lnx_ipc_rpc.h  npi_lnx_spi.c  npi_lnx_spi.h  npi_lnx_uart.c  npi_lnx_uart.h
Projects/tools/LinuxHost/ipclib/client/: CMakeLists.txt  npi_attenuator.c  npi_attenuator.h  npi_boot.c  npi_boot.h  npi_capSense.c  npi_capSense.h  npi_ipc_client.c  npi_ipc_client.h  npi_peripherals.c  npi_peripherals.h  npi_rcn.c  npi_rcn.h  npi_rti.c  npi_rti.h  rti_lnx.h  rti_lnx_constants.h  rtis_lnx.h
Projects/tools/LinuxHost/ipclib/client/gdp/: gdp.h  gdp_api.h  gdp_common.h  gdp_profile.h
Projects/tools/LinuxHost/ipclib/client/zrc/: zrc.h  zrc_profile.h  zrc_vendor_specific.h
Projects/tools/LinuxHost/ipclib/common/: CMakeLists.txt  hal_dbg_ifc_rpc.h  hal_defs.h  hal_rpc.h  hal_types.h  npi_lnx.h  npi_lnx_error.h  npi_lnx_ipc_rpc.h
Projects/tools/LinuxHost/ipclib/server/: CMakeLists.txt  OEM_NpiStartupHook.c  OEM_NpiStartupHook.h  OEM_spi_semaphore.h  aic.h  hal_adc.c  hal_adc.h  hal_board.h  hal_dbg_ifc.c  hal_dbg_ifc.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_spi.c  hal_spi.h  npi_lnx_adc.c  npi_lnx_i2c.c  npi_lnx_i2c.h  npi_lnx_ipc.c  npi_lnx_serial_configuration.c  npi_lnx_serial_configuration.h  npi_lnx_spi.c  npi_lnx_spi.h  npi_lnx_uart.c  npi_lnx_uart.h  time_printf.c  time_printf.h
Projects/tools/LinuxHost/rtilib/: rti_lnx.h  rti_lnx_constants.h  rtis_lnx.c  rtis_lnx.h  rtis_lnx_ipc_client.c
Projects/tools/LinuxHost/services/: CMakeLists.txt  saddr.h
